@@ -15,6 +15,7 @@ package Paws::API::ServiceToClass;
     cloudformation => 'CloudFormation',
     cloudfront => 'CloudFront',
     cloudhsm => 'CloudHSM',
+    cloudhsmv2 => 'CloudHSMv2',
     cloudsearch => 'CloudSearch',
     cloudsearchdomain => 'CloudSearchDomain',
     cloudtrail => 'CloudTrail',
@@ -56,6 +57,7 @@ package Paws::API::ServiceToClass;
     firehose => 'Firehose',
     gamelift => 'GameLift',
     glacier => 'Glacier',
+    glue => 'Glue',
     greengrass => 'Greengrass',
     health => 'Health',
     iam => 'IAM',
@@ -75,6 +77,7 @@ package Paws::API::ServiceToClass;
     marketplacecommerceanalytics => 'MarketplaceCommerceAnalytics',
    'marketplace-entitlement' => 'MarketplaceEntitlement',
     meteringmarketplace => 'MarketplaceMetering',
+    mgh => 'MigrationHub',
     monitoring => 'CloudWatch',
     mturk => 'MTurk',
     opsworks => 'OpsWorks',
